# StegoBMP

./: .gitignore  CMakeLists.txt  README.md
resources/Answers/sols/: sol12.txt
resources/test_files/: message.txt
src/: arguments.c  bmp_image.c  crypto.c  cryptoUtils.c  embed.c  embed_utils.c  file_handler.c  file_package.c  logger.c  main.c  mian.c  stego_bmp.c  utils.c
src/include/: arguments.h  bmp_image.h  crypto.h  cryptoUtils.h  embed.h  embed_utils.h  file_handler.h  file_package.h  logger.h  stego_bmp.h  types.h  utils.h
tests/: test_arguments.c  test_bmp_image.c  test_file_handler.c  test_file_package.c  test_stegobmp.c  test_utils.c
